--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@ body {
         <h2><a href="https://bb.usurt.ru/webapps/blackboard/content/listContent.jsp?course_id=_6399_1&content_id=_50157_1&mode=reset" >Математика Дерябин</a></h2>
         <h2><a href="https://bb.usurt.ru/webapps/blackboard/content/listContent.jsp?course_id=_8052_1&content_id=_67598_1&mode=reset" >Физкультура Розенфельд</a></h2>
         <h2><a href="https://bb.usurt.ru/webapps/blackboard/execute/modulepage/view?course_id=_5357_1&cmp_tab_id=_8856_1&mode=view" >Физика Першин</a></h2>
+        <h2><a href="https://bb.usurt.ru/webapps/assignment/uploadAssignment?content_id=_77619_1&course_id=_1013_1&group_id=&mode=view" >Физкультура Симонова</a></h2>
         <h2><a href="" ></a></h2>
        </td>
     <td width="200" valign="top">
