--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@ body {
     <td width="200" valign="top">
         <h1>Прочее:</h1>
        <h2><a href="https://docviewer.yandex.ru/view/378636117/?page=4&*=ntrsXQUaFDLMIRc%2Bc5BKg54k4J97InVybCI6InlhLWRpc2stcHVibGljOi8vRUdhbm5qRXJJUm5yTTFhOFd3dUw3NVdYYVlXaG40SHgxUjB2dlh1enNzazcwaEhRYjFIVDBZbm9uVEdtbXZZVHEvSjZicG1SeU9Kb25UM1ZvWG5EYWc9PTov0KHQsdC%2B0YDQvdC40Log0YTQvtGA0LzRg9C7INC%2F0L4g0YTQuNC30LjQutC1INCV0JPQrSAyMDIwLnBkZiIsInRpdGxlIjoi0KHQsdC%2B0YDQvdC40Log0YTQvtGA0LzRg9C7INC%2F0L4g0YTQuNC30LjQutC1INCV0JPQrSAyMDIwLnBkZiIsIm5vaWZyYW1lIjpmYWxzZSwidWlkIjoiMzc4NjM2MTE3IiwidHMiOjE2MDAyNTExNTg1NDQsInl1IjoiMTg3NjY0MzIzMTU5MzQ1NzIzNyJ9" >Формулы по физике</a></h2>
+       <h2><a href="https://vk.com/doc4072635_566168465?hash=0aa17fc0cd7e324581&dl=f8ec68d8a75ca1e709" >Список</a></h2>
     </td>
    </tr>
     </table>
