--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@ body {
   <a class="active">ИТ-110</a>
   <a href="/home/">Главная</a>
   <a href="/pr/">Предметы</a>
-  <a href="https://bb.usurt.ru/bbcswebdav/institution/Расписание/Четная неделя/Электротехнический факультет/ЭТФ 1 курс четная.xls" target="_self">Ссылка на чётную неделю</a>
-  <a href="https://bb.usurt.ru/bbcswebdav/institution/Расписание/Нечетная неделя/Электротехнический факультет/ЭТФ 1 курс.xls" target="_self">Ссылка на нечётную неделю</a>
-  <a href="https://bb.usurt.ru/webapps/login/" target="_self">Ссылка в ББ</a>
+  <a href="https://bb.usurt.ru/bbcswebdav/institution/Расписание/Четная неделя/Электротехнический факультет/ЭТФ 1 курс четная.xls" target="_self">Чётную неделю</a>
+  <a href="https://bb.usurt.ru/bbcswebdav/institution/Расписание/Нечетная неделя/Электротехнический факультет/ЭТФ 1 курс.xls" target="_self">Нечётную неделю</a>
+  <a href="https://bb.usurt.ru/webapps/login/" target="_self">blackBoard</a>
   <a class="r " href="https://discord.gg/Tb3dPa3" target="_self">Discord</a>
   <a class="r" href="/tests/">Test</a>
   <a class="r" href="Ссылочка">***</a>
