--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@ body {
     </td>
    </tr>
     </table>
-<p style="position:absolute;right:0;bottom:0;margin-bottom:0"><a href="https://vk.com/legion065yp0">@@@Максимка@@@</a></p>
+<p style="position:absolute;right:0;bottom:0;margin-bottom:0"><a href="https://vk.com/legion065yp0">@@@Макс@@@</a></p>
 
 </body>
 </html>
