--- a/index.html
+++ b/index.html
@@ -65,7 +65,6 @@ body {
         <h2><a href="https://bb.usurt.ru/webapps/blackboard/content/launchLink.jsp?course_id=_8052_1&tool_id=_1732_1&tool_type=TOOL&mode=view&mode=reset">Физкультура Розенфельд</a></h2>
         <h2><a href="" ></a></h2>
         <h2><a href="" ></a></h2>
-        <h2><a href="" ></a></h2>
     </td>
        <td width="200" valign="top">
            <h1>Домашка:</h1>
@@ -84,7 +83,7 @@ body {
        <h2><a href="https://vk.com/doc4072635_566168465?hash=0aa17fc0cd7e324581&dl=f8ec68d8a75ca1e709" >Список</a></h2>
        <h2><a href="https://pdf.io/ru/jpg2pdf/" >Конвертирование в PDF файл</a></h2>   
        <h2><a href="https://bb.usurt.ru/webapps/blackboard/content/listContent.jsp?course_id=_5110_1&content_id=_63493_1&mode=reset" >План работ по информатике</a></h2>
-                                                     
+       <h2><a href="https://translate.yandex.ru/?lang=en-ru" >Переводчик</a></h2>                                              
     </td>
    </tr>
     </table>
