--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@ body {
   <a class="active">ИТ-110</a>
   <a href="/home/">Главная</a>
   <a href="/pr/">Предметы</a>
-  <a href="https://bb.usurt.ru/bbcswebdav/institution/Расписание/Четная неделя/Электротехнический факультет/ЭТФ 1 курс четная.xls" target="_self">Чётную неделю</a>
-  <a href="https://bb.usurt.ru/bbcswebdav/institution/Расписание/Нечетная неделя/Электротехнический факультет/ЭТФ 1 курс.xls" target="_self">Нечётную неделю</a>
+  <a href="https://bb.usurt.ru/bbcswebdav/institution/Расписание/Очное%20отделение/Четная%20неделя/Электротехнический%20факультет/ЭТФ%201%20курс%20четная.xls">Чётную неделю</a>
+  <a href="https://bb.usurt.ru/bbcswebdav/institution/Расписание/Очное%20отделение/Нечетная%20неделя/Электротехнический%20факультет/ЭТФ%201%20курс.xls">Нечётную неделю</a>
   <a href="https://bb.usurt.ru/webapps/login/" target="_self">BlackBoard</a>
   <a class="r " href="https://discord.gg/Tb3dPa3" target="_self">Discord</a>
   <a class="r" href="/tests/">Test</a>
