--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@ body {
         <h2><a href="https://bb.usurt.ru/webapps/blackboard/content/launchLink.jsp?course_id=_6399_1&tool_id=_1732_1&tool_type=TOOL&mode=view&mode=reset">Математика Дерябин</a></h2>
         <h2><a href="https://bb.usurt.ru/webapps/blackboard/content/launchLink.jsp?course_id=_8052_1&tool_id=_1732_1&tool_type=TOOL&mode=view&mode=reset">Физкультура Розенфельд</a></h2>
         <h2><a href="" ></a></h2>
-        <h2><a href="" ></a></h2>
-    </td>
+        <h2><a href="" ></a></h2>              
+     </td>
        <td width="200" valign="top">
            <h1>Домашка:</h1>
         <h2><a href="https://bb.usurt.ru/webapps/blackboard/content/listContent.jsp?course_id=_5093_1&content_id=_42687_1&mode=reset" >Английский Пермякова</a></h2>
@@ -76,6 +76,7 @@ body {
         <h2><a href="https://bb.usurt.ru/webapps/blackboard/execute/modulepage/view?course_id=_5357_1&cmp_tab_id=_8856_1&mode=view" >Физика Першин</a></h2>
         <h2><a href="https://bb.usurt.ru/webapps/assignment/uploadAssignment?content_id=_77619_1&course_id=_1013_1&group_id=&mode=view" >Физкультура Симонова</a></h2>
         <h2><a href="" ></a></h2>
+        <h2><a href="" ></a></h2>              
        </td>
     <td width="200" valign="top">
         <h1>Прочее:</h1>
@@ -83,7 +84,10 @@ body {
        <h2><a href="https://vk.com/doc4072635_566168465?hash=0aa17fc0cd7e324581&dl=f8ec68d8a75ca1e709" >Список учащихся</a></h2>
        <h2><a href="https://pdf.io/ru/jpg2pdf/" >Конвертирование в PDF файл</a></h2>   
        <h2><a href="https://bb.usurt.ru/webapps/blackboard/content/listContent.jsp?course_id=_5110_1&content_id=_63493_1&mode=reset" >План работ по информатике</a></h2>
-       <h2><a href="https://translate.yandex.ru/?lang=en-ru" >Переводчик</a></h2>                                              
+       <h2><a href="https://translate.yandex.ru/?lang=en-ru" >Переводчик</a></h2>      
+       <h2><a href="https://www.ilovepdf.com/ru/merge_pdf" >Соединение PDF файлов</a></h2>    
+       <h2><a href="" ></a></h2>
+       <h2><a href="" ></a></h2>              
     </td>
    </tr>
     </table>
