--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@ body {
   <a class="active">ИТ-110</a>
   <a href="/home/">Главная</a>
   <a href="/pr/">Предметы</a>
-  <a href="https://bb.usurt.ru/bbcswebdav/institution/Расписание/Очное%20отделение/Четная%20неделя/Электротехнический%20факультет/ЭТФ%201%20курс%20четная.xls">Чётную неделю</a>
-  <a href="https://bb.usurt.ru/bbcswebdav/institution/Расписание/Очное%20отделение/Нечетная%20неделя/Электротехнический%20факультет/ЭТФ%201%20курс.xls">Нечётную неделю</a>
+  <a href="https://bb.usurt.ru/bbcswebdav/institution/Расписание/Очное%20отделение/Четная%20неделя/Электротехнический%20факультет/ЭТФ%201%20курс%20четная.xls">Чётная неделя</a>
+  <a href="https://bb.usurt.ru/bbcswebdav/institution/Расписание/Очное%20отделение/Нечетная%20неделя/Электротехнический%20факультет/ЭТФ%201%20курс.xls">Нечётная неделя</a>
   <a href="https://bb.usurt.ru/webapps/login/" target="_self">BlackBoard</a>
   <a class="r " href="https://discord.gg/Tb3dPa3" target="_self">Discord</a>
   <a class="r" href="/tests/">Test</a>
@@ -86,7 +86,8 @@ body {
        <h2><a href="https://bb.usurt.ru/webapps/blackboard/content/listContent.jsp?course_id=_5110_1&content_id=_63493_1&mode=reset" >План работ по информатике</a></h2>
        <h2><a href="https://translate.yandex.ru/?lang=en-ru" >Переводчик</a></h2>      
        <h2><a href="https://www.ilovepdf.com/ru/merge_pdf" >Соединение PDF файлов</a></h2>    
-       <h2><a href="" ></a></h2>
+       <h2><a href="https://vk.com/doc137581082_573475734?hash=09092cd5925284fe01&dl=98fe610de49cda31e1" >Учебник по английскому у Пермяковой</a></h2>
+       <h2><a href="https://vk.com/doc137581082_573477392?hash=31e495cd1066a62878&dl=a265c990f1e0bdfab7" >Тетрадь по английскому у Пермяковой </a></h2> 
        <h2><a href="" ></a></h2>              
     </td>
    </tr>
