--- a/index.html
+++ b/index.html
@@ -67,24 +67,18 @@ body {
         <h2><a href="" ></a></h2>              
      </td>
        <td width="200" valign="top">
-           <h1>Домашка:</h1>
-        <h2><a href="https://bb.usurt.ru/webapps/blackboard/content/listContent.jsp?course_id=_5093_1&content_id=_42687_1&mode=reset" >Английский Пермякова</a></h2>
-        <h2><a href="https://bb.usurt.ru/webapps/blackboard/content/listContent.jsp?course_id=_5363_1&content_id=_43767_1&mode=reset" >Философия Пятилетова</a></h2>
-        <h2><a href="https://bb.usurt.ru/webapps/blackboard/content/listContent.jsp?course_id=_5082_1&content_id=_42643_1&mode=reset" >Английский Друцко</a></h2>
-        <h2><a href="https://bb.usurt.ru/webapps/blackboard/content/listContent.jsp?course_id=_6399_1&content_id=_50157_1&mode=reset" >Математика Дерябин</a></h2>
-        <h2><a href="https://bb.usurt.ru/webapps/blackboard/content/listContent.jsp?course_id=_8052_1&content_id=_67598_1&mode=reset" >Физкультура Розенфельд</a></h2>
-        <h2><a href="https://bb.usurt.ru/webapps/blackboard/execute/modulepage/view?course_id=_5357_1&cmp_tab_id=_8856_1&mode=view" >Физика Першин</a></h2>
-        <h2><a href="https://bb.usurt.ru/webapps/assignment/uploadAssignment?content_id=_77619_1&course_id=_1013_1&group_id=&mode=view" >Физкультура Симонова</a></h2>
-        <h2><a href="" ></a></h2>
-        <h2><a href="" ></a></h2>              
+       <h1>Бог в помощь:</h1>
+       <h2><a href="https://translate.yandex.ru/?lang=en-ru" >Переводчик</a></h2>      
+       <h2><a href="https://docviewer.yandex.ru/view/378636117/?page=4&*=ntrsXQUaFDLMIRc%2Bc5BKg54k4J97InVybCI6InlhLWRpc2stcHVibGljOi8vRUdhbm5qRXJJUm5yTTFhOFd3dUw3NVdYYVlXaG40SHgxUjB2dlh1enNzazcwaEhRYjFIVDBZbm9uVEdtbXZZVHEvSjZicG1SeU9Kb25UM1ZvWG5EYWc9PTov0KHQsdC%2B0YDQvdC40Log0YTQvtGA0LzRg9C7INC%2F0L4g0YTQuNC30LjQutC1INCV0JPQrSAyMDIwLnBkZiIsInRpdGxlIjoi0KHQsdC%2B0YDQvdC40Log0YTQvtGA0LzRg9C7INC%2F0L4g0YTQuNC30LjQutC1INCV0JPQrSAyMDIwLnBkZiIsIm5vaWZyYW1lIjpmYWxzZSwidWlkIjoiMzc4NjM2MTE3IiwidHMiOjE2MDAyNTExNTg1NDQsInl1IjoiMTg3NjY0MzIzMTU5MzQ1NzIzNyJ9" >Формулы по физике</a></h2>
+       <h2><a href="https://math.semestr.ru/math/diff.php" ></a>Производные</h2>    
+       <h2><a href="https://www.desmos.com/calculator/mhprtjb6oa?lang=ru" ></a>Построение графиков</h2>
+       <h2><a href="" ></a></h2>
        </td>
     <td width="200" valign="top">
         <h1>Прочее:</h1>
-       <h2><a href="https://docviewer.yandex.ru/view/378636117/?page=4&*=ntrsXQUaFDLMIRc%2Bc5BKg54k4J97InVybCI6InlhLWRpc2stcHVibGljOi8vRUdhbm5qRXJJUm5yTTFhOFd3dUw3NVdYYVlXaG40SHgxUjB2dlh1enNzazcwaEhRYjFIVDBZbm9uVEdtbXZZVHEvSjZicG1SeU9Kb25UM1ZvWG5EYWc9PTov0KHQsdC%2B0YDQvdC40Log0YTQvtGA0LzRg9C7INC%2F0L4g0YTQuNC30LjQutC1INCV0JPQrSAyMDIwLnBkZiIsInRpdGxlIjoi0KHQsdC%2B0YDQvdC40Log0YTQvtGA0LzRg9C7INC%2F0L4g0YTQuNC30LjQutC1INCV0JPQrSAyMDIwLnBkZiIsIm5vaWZyYW1lIjpmYWxzZSwidWlkIjoiMzc4NjM2MTE3IiwidHMiOjE2MDAyNTExNTg1NDQsInl1IjoiMTg3NjY0MzIzMTU5MzQ1NzIzNyJ9" >Формулы по физике</a></h2>
        <h2><a href="https://vk.com/doc23680623_569899615?hash=2399dc11cd010f449a&dl=101bfa2910f7af34cb" >Список учащихся</a></h2>
        <h2><a href="https://pdf.io/ru/jpg2pdf/" >Конвертирование в PDF файл</a></h2>   
        <h2><a href="https://bb.usurt.ru/webapps/blackboard/content/listContent.jsp?course_id=_5110_1&content_id=_63493_1&mode=reset" >План работ по информатике</a></h2>
-       <h2><a href="https://translate.yandex.ru/?lang=en-ru" >Переводчик</a></h2>      
        <h2><a href="https://www.ilovepdf.com/ru/merge_pdf" >Соединение PDF файлов</a></h2>    
        <h2><a href="https://vk.com/doc137581082_573475734?hash=09092cd5925284fe01&dl=98fe610de49cda31e1" >Учебник по английскому у Пермяковой</a></h2>
        <h2><a href="https://vk.com/doc137581082_573477392?hash=31e495cd1066a62878&dl=a265c990f1e0bdfab7" >Тетрадь по английскому у Пермяковой </a></h2> 
