--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@ body {
        <h1>Бог в помощь:</h1>
        <h2><a href="https://translate.yandex.ru/?lang=en-ru" >Переводчик</a></h2>      
        <h2><a href="https://docviewer.yandex.ru/view/378636117/?page=4&*=ntrsXQUaFDLMIRc%2Bc5BKg54k4J97InVybCI6InlhLWRpc2stcHVibGljOi8vRUdhbm5qRXJJUm5yTTFhOFd3dUw3NVdYYVlXaG40SHgxUjB2dlh1enNzazcwaEhRYjFIVDBZbm9uVEdtbXZZVHEvSjZicG1SeU9Kb25UM1ZvWG5EYWc9PTov0KHQsdC%2B0YDQvdC40Log0YTQvtGA0LzRg9C7INC%2F0L4g0YTQuNC30LjQutC1INCV0JPQrSAyMDIwLnBkZiIsInRpdGxlIjoi0KHQsdC%2B0YDQvdC40Log0YTQvtGA0LzRg9C7INC%2F0L4g0YTQuNC30LjQutC1INCV0JPQrSAyMDIwLnBkZiIsIm5vaWZyYW1lIjpmYWxzZSwidWlkIjoiMzc4NjM2MTE3IiwidHMiOjE2MDAyNTExNTg1NDQsInl1IjoiMTg3NjY0MzIzMTU5MzQ1NzIzNyJ9" >Формулы по физике</a></h2>
-       <h2><a href="https://math.semestr.ru/math/diff.php" >Производные></a></h2>    
-       <h2><a href="https://www.desmos.com/calculator/mhprtjb6oa?lang=ru" >Построение графиков></a></h2>
+       <h2><a href="https://math.semestr.ru/math/diff.php" >Производные</a></h2>    
+       <h2><a href="https://www.desmos.com/calculator/mhprtjb6oa?lang=ru" >Построение графиков</a></h2>
        <h2><a href="" ></a></h2>
        </td>
     <td width="200" valign="top">
